# SolVault

./: .gitignore  Cargo.toml  Dockerfile  README.md  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yml
crates/wallet-cli/: Cargo.toml
crates/wallet-cli/src/: main.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: keypair.rs  lib.rs  rpc.rs  transaction.rs  vault.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/auth/: AuthScreen.tsx  CreateWalletForm.tsx  UnlockWalletForm.tsx
src/components/dashboard/: Dashboard.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Tabs.tsx
src/contexts/: WalletProvider.tsx
src/lib/: animations.ts  crypto-utils.ts  utils.ts  wallet-types.ts
