[package]
name = "solvault"
description = "A non-custodial Solana terminal wallet built entirely in Rust."
repository = "https://github.com/theoxfaber/SolVault"
license = "MIT"
version.workspace = true
edition.workspace = true

[[bin]]
name = "solvault"
path = "src/main.rs"

[dependencies]
solvault-core = { path = "../wallet-core", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dialoguer = { version = "0.11", features = ["password"] }
colored = "3"
dirs = "6"
solana-sdk = "2"
solana-client = "2"
bip39 = { version = "2", features = ["rand"] }
